Fix gap between question panels

--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -29,7 +29,7 @@
             flex-direction: row;
             justify-content: space-between;
 
-            &-item {
+            &-item:only-of-type {
                 margin: 0 auto;
             }
         }
